# opacus-fusion

./: .gitignore  README.md  requirements.txt
custom_rnn/: custom_rnn.cpp  error_helper.h  lstm_cuda_kernel.cu  (+1 more)
cutlass_wgrad_grouped/: .gitignore  CMakeLists.txt  KERNELS  build_test.sh  compile_results.json  compile_results_int.json  compile_results_int_tensorop.json  cutlass_wgrad_grouped.pc.in  kernel_test  kernel_test.cu  test.cpp  test_value.cpp
cutlass_wgrad_grouped/include/: cuda_error_helper.h  cutlass_wgrad_grouped.h
cutlass_wgrad_grouped/scripts/: generate_all.py  generate_initialize_all_cpp.py  generate_initialize_all_h.py  generate_kernel.py  generate_test_kernel.py
cutlass_wgrad_grouped/src/: cutlass_simt_swgrad_grouped_optimized_32x32x4_16x16x4_1x1x1_3_nhwc.cu  cutlass_wgrad_grouped.cu  initialize_all.h  initialize_iwgrad_grouped.cpp  initialize_iwgrad_grouped.h  initialize_iwgrad_tensorop_grouped.cpp  initialize_iwgrad_tensorop_grouped.h  initialize_swgrad_grouped.cpp  initialize_swgrad_grouped.h  wgrad_grouped_operation.h
cutlass_wgrad_grouped/src/kernel/: cutlass_simt_swgrad_grouped_optimized_128x128x2_128x128x2_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_128x128x2_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_128x16x2_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_128x16x2_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_128x32x2_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_128x32x2_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_128x64x2_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_128x64x2_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_16x128x2_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_16x128x2_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_32x128x2_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_32x128x2_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_32x64x2_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_32x64x2_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_64x128x2_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_64x128x2_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_64x32x2_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_64x32x2_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_64x64x2_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x2_64x64x2_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_128x128x8_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_128x128x8_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_128x16x8_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_128x16x8_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_128x32x8_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_128x32x8_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_128x64x8_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_128x64x8_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_16x128x8_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_16x128x8_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_16x32x8_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_16x32x8_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_16x64x8_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_16x64x8_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_32x128x8_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_32x128x8_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_32x16x8_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_32x16x8_1x1x1_5_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_32x32x8_1x1x1_3_nhwc.cu  cutlass_simt_swgrad_grouped_optimized_128x128x8_32x32x8_1x1x1_5_nhwc.cu  (+198 more)
cutlass_wgrad_grouped/src/kernel_int/: cutlass_simt_iwgrad_grouped_optimized_128x128x2_128x128x2_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x2_128x16x2_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x2_128x32x2_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x2_128x64x2_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x2_16x128x2_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x2_32x128x2_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x2_32x64x2_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x2_64x128x2_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x2_64x32x2_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x2_64x64x2_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x32_128x128x32_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x32_128x16x32_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x32_128x32x32_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x32_128x64x32_1x1x4_3_nhwc.cu  cutlass_simt_iwgrad_grouped_optimized_128x128x32_16x128x32_1x1x4_3_nhwc.cu  (+342 more)
(+389 files in other folders)
